--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">Projects</a>
           <div class="dropdown-menu">
             <ul>
-              <li><a href="eda-pw-week-2-assignment/assignment/index.html">Week 2</a></li>
-              <li><a href="eda-pw-week-4-assignment/assignment/index.html">Week 4</a></li>
-              <li><a href="eda-pw-week-5-assignment/assignment/index.html">Week 5</a></li>
+              <li><a href="assignment2/index.html">Week 2</a></li>
+              <li><a href="assignment4/index.html">Week 4</a></li>
+              <li><a href="assignment5/index.html">Week 5</a></li>
             </ul>
           </div>
         </li>
