--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">Projects</a>
           <div class="dropdown-menu">
             <ul>
-              <li><a href="assignment-2/wk2.html">Week 2</a></li>
+              <li><a href="assignment-2/wk2.html">Week THree</a></li>
               <li><a href="assignment-4/wk4.html">Week 4</a></li>
               <li><a href="assignment-5/wk5.html">Week 5</a></li>
             </ul>
